app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";
@import "admin-lte";
@import "admin-lte/skins/skin-blue";
@import 'ionicons';
@import 'animate';
@import 'checkbox3';
@import 'dataTables/bootstrap/3/jquery.dataTables.bootstrap';
@import 'select.bootstrap';
@import 'responsive.bootstrap';
@import 'pace.min';
@import 'devise';
@import 'perfect-scrollbar';

.navbar-login {
  width: 305px;
  padding: 10px;
  padding-bottom: 0px;
}

.navbar-login-session {
  padding: 10px;
  padding-bottom: 0px;
  padding-top: 0px;
}

.icon-size {
  font-size: 87px;
}

.devise-links {
  border-top: 1px solid#888;
  padding-top: 15px;
  margin-top: 15px;
  font-size: 85%;
}

.img-table {
  width: 32px;
  margin-top: 3px;
}

ul .treeview-menu form {
  display: inline-table;
}

span.time {
  white-space: nowrap;
}

tr.comment {
  span.time {
    color: #999;
    font-size: 12px;
  }
}

.clickable-row {
  cursor: pointer;
}

.col-centered {
  float: none;
  margin: 0 auto;
}

.btn-action {
  float: left;
}

.perfectScrollbar {
  position: relative;
  max-height: 380px;
}

.timeline-wrapper {
  width: 100%;
  display: flex;
}

.select-wrapper {
  margin: auto;
  padding: 10px;
}

.comment-timeline, .message-timeline {
  transition: transform 0.5s ease-in-out;
  font-size: 16px;
  padding: 10px 0px 10px 0px;

  .direct-chat-timestamp.timestamp-header {
    text-align: center;
    margin-bottom: 4px;
  }

  .direct-chat-text {
    min-height: 76px;
    padding: 10px;
  }

  .direct-chat-name {
    &.pull-right {
      margin-right: 50px;
    }
    &.pull-left {
      margin-left: 50px;
    }
  }

  .direct-chat-msg:not(.right) {
    margin-right: 50px;
  }

  .direct-chat-msg.right {
    margin-left: 50px;
  }

  .direct-chat-msg:not(:last-child){
    padding-bottom: 14px;
  }

  .direct-chat-msg.right>.direct-chat-text {
    background: #3c8dbc;
    border-color: #3c8dbc;
    color: #fff;
  }

  .direct-chat-msg.right>.direct-chat-text:after {
    border-left-color: #3c8dbc;
  }
}

@media (min-width: 992px) {
  .comment-timeline, .message-timeline {
    padding: 10px 60px 10px 60px;
  }
}

// Half-Fixed Layout
@media (max-width: 768px) {
  nav.navbar.navbar-static-top.affix {
    top: 0;
  }
  .wrapper {
    position: absolute;
    width: 100%;
  }
  .wrapper.affixed {
    padding-top: 50px;
  }
  .truncate {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    &.truncate-small {
      max-width: 170px;
    }
    &.truncate-medium {
      max-width: 220px;
    }
  }
}

@media (min-width: 768px) {
  nav.navbar.navbar-static-top.affix {
    position: relative;
  }
}

// iOS-Fix
nav.navbar.navbar-static-top {
  transform:translateZ(0);
}

.nav-tabs-custom > .nav-tabs > li:not(.active) > a:hover, .nav-tabs-custom > .nav-tabs > li:not(.active) > a:focus, .nav-tabs-custom > .nav-tabs > li:not(.active) > a:active {
  border-bottom-color: #DDDDDD;
}

.nav-tabs-custom > .nav-tabs > li > a, .nav-tabs-custom > .nav-tabs > li > a:hover {
  background: #F0F0F0;
}

h3>small {
  font-weight: 300;
}

.table-vertical-center {
  thead tr th, tbody tr td {
    vertical-align: middle;
  }
}

.messages {
  margin-top: 60px;
}

